# dependabot-core

./: .circle.yml  .codespellrc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .octocov.yml  .rubocop.yml  .rubocop_todo.yml  .tool-versions  .travis.yml  .yamllint.yaml  1689-a58e2f62c7501633.js.download  2857-eb0ce2ad0c296fee.js.download  2911edaa-48f4fcf2afb436e9.js.download  3576-c43ad339bd2e423d.js.download  3977-ac4101a5fa3974b9.js.download  4755-e0fc68ab2ec605cc.js.download  8369-04124eb1c587abb7.js.download  8540-52db8075e34d1200.js.download  Azura  Backup-codes-michakinchen27.txt  CACHE_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_ARCHIVE_2017_TO_2018.md  CHANGELOG_ARCHIVE_2019_TO_SWITCH_TO_GITHUB_RELEASES.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chocolatey.md  DEPENDABOT_BRANCH_ANALYSIS_DEEP_DIVE.md  Dependabot supported ecosystems and repositories - GitHub Docs.html  Dockerfile  Dockerfile.base  Dockerfile.cargo  Dockerfile.ci  Dockerfile.development  (+78 more)
.circleci/: config.yml
.dependabot/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ci-filters.yml  ci-matrix.json  copilot-instructions.md  dependabot.yml  issue-labeler.yml  labeler.yml  pull_request_template.md  smoke-filters.yml  smoke-matrix.json  stale.yml
.specify/: init-options.json
Afsoning/: dependabot
ansible/: README.md  dependabot-ansible.gemspec
app/: boot.rb  dependency.rb  dependency_file.rb  init_shoryuken.rb  init_sidekiq.rb  pull_request_creator.rb  repo.rb
azure_pipelines/: .rubocop.yml  Dockerfile  README.md  dependabot-azure_pipelines.gemspec
bazel/: .gitignore  .rubocop.yml  Dockerfile  README.md  dependabot-bazel.gemspec
bazel/spec/fixtures/projects/build_bazel_complex/: BUILD.bazel
bazel/spec/fixtures/projects/complex_module/: MODULE.bazel
bazel/spec/fixtures/projects/edge_case_formatting/: MODULE.bazel
bazel/spec/fixtures/projects/malformed_content/: MODULE.bazel
bazel/spec/fixtures/projects/parameter_order_variations/: MODULE.bazel
bazel/spec/fixtures/projects/with_extensions/: MODULE.bazel
bazel/spec/fixtures/projects/workspace_bazel_complex/: WORKSPACE.bazel
bun/: .gitignore  .rubocop.yml  Dockerfile  README.md  dependabot-bun.gemspec
bundler/: .gitignore  .rubocop.yml  .rubocop_todo.yml  Dockerfile  Gemfile  README.md  Rakefile  dependabot-bundler.gemspec
cake/: Gemfile  README.md  dependabot-cake.gemspec
cargo/: .rubocop.yml  Dockerfile  README.md  dependabot-cargo.gemspec
cargo/spec/fixtures/manifests/workspace_dependencies/: Cargo.toml
cargo/spec/fixtures/manifests/workspace_dependencies/fvm/: Cargo.toml
cargo/spec/fixtures/manifests/workspace_dependencies/sdk/: Cargo.toml
cargo/spec/fixtures/projects/version_conflict/: Cargo.toml
clojure/: Dockerfile  README.md  dependabot-clojure.gemspec
cocoapods/: .gitignore  Gemfile  README.md  dependabot-cocoapods.gemspec  dependabot-dep.gemspec
common/: .gitignore  .rubocop.yml  Dockerfile  Gemfile  Steepfile  dependabot-common.gemspec  test_parse.rb  test_update_config.rb  test_update_config2.rb  test_update_config3.rb  test_update_config4.rb  test_update_config5.rb  test_update_config6.rb
composer/: .gitignore  .rubocop.yml  Dockerfile  README.md  dependabot-composer.gemspec
conda/: .gitignore  Dockerfile  README.md  conda_implementation.md  dependabot-conda.gemspec
config/: dummy_env  example_lambda_function.js  rubocop-default.yml  rubocop-top-level.yml  shoryuken.yml  sidekiq.yaml
crystal_shards/: Dockerfile  README.md  dependabot-crystal_shards.gemspec
deno/: .gitignore  Dockerfile  README.md  dependabot-deno.gemspec
dep/: .gitignore  .rubocop.yml  Gemfile  README.md  dependabot-dep.gemspec
devbox/: Dockerfile  README.md  dependabot-devbox.gemspec
devcontainers/: Dockerfile  README.md  dependabot-devcontainers.gemspec
docker/: .gitignore  .rubocop.yml  Dockerfile  Gemfile  README.PIX4D.md  README.md  dependabot-docker.gemspec  dependabot-docker_compose.gemspec  dependabot-main.rb  dependabot-main_spec.rb  update_script.rb
docker_compose/: Dockerfile  README.md  dependabot-docker_compose.gemspec
docs/: COVERAGE.md  README.md  branch-lifecycle-analysis.md  branch-mirroring-conflict-summary.md  branch-mirroring-diagrams.md  julia-updates.md  npm-install-script-warnings.md  support-response-template.md
dotnet_sdk/: Dockerfile  README.md  dependabot-dotnet_sdk.gemspec
elm/: .rubocop.yml  Dockerfile  README.md  dependabot-elm.gemspec
external_files/: update-script.rb
git_submodules/: .rubocop.yml  Dockerfile  README.md  Steepfile  dependabot-git-submodules.gemspec  dependabot-git_submodules.gemspec
github_actions/: .gitattributes  Dockerfile  README.md  dependabot-github_actions.gemspec
go_modules/: .rubocop.yml  Dockerfile  Dockerfile.run  Makefile  README.md  dependabot-go_modules.gemspec  go.env  mkcert-ca.crt  update_go_mod_version.rb
gradle/: .rubocop.yml  Dockerfile  README.md  dependabot-gradle.gemspec
haskell/: README.md  (+1 more)
haskell/spec/fixtures/cabal_files/: Cabal.cabal
opam/spec/fixtures/: example.opam
opam/spec/fixtures/github/: contents_ocaml_opam_file.json  contents_ocaml_repo.json
python/spec/fixtures/projects/pdm/: pyproject.toml
python/spec/fixtures/projects/poetry/multiple_requirements/: pyproject.toml
spec/fixtures/python/pyproject_files/: caret_version.toml  conflict_at_latest.toml  exact_version.toml  git_dependency.toml  needs_sanitization.toml  pyproject.toml  python_2.toml  version_not_specified.toml
spec/fixtures/python/setup_files/: imports_version_for_dep.py  no_tests_require.py  setup.cfg  setup.py  small.py  small_needs_sanitizing.py  with_open.py  with_pbr.py  with_print.py
uv/spec/fixtures/projects/pipenv/editable-package/: Pipfile  pyproject.toml
uv/spec/fixtures/projects/pipenv/editable-package/ballcone/: __init__.py
uv/spec/fixtures/projects/poetry/relative_path/: pyproject.toml
uv/spec/fixtures/projects/poetry/relative_path/my-project/: pyproject.toml
(+10645 files in other folders)
