[tool.poetry]
name = "Python Projects"
version = "2.0.0"
homepage = "https://github.com/roghu/py3_projects"
license = "MIT"
readme = "README.md"
authors = ["Dependabot <support@dependabot.com>"]
description = "Various small python projects."

[tool.poetry.dependencies]
python = "^3.6"
geopy = "^1.13"
Pillow = "^5.1"
requests = "^2.18"

[tool.poetry.dev-dependencies]
black = "^18.5"
flake8 = "^3.5"
flake8-comprehensions = "^1.4"
httmock = "^1.2"
hypothesis = "^3.56"
mypy = "^0.600"
pytest = "^3.5"
pytest-cov = "^2.5"
pytest-mock = "^1.9"
pytest-sugar = "^0.9"
pytest-random-order = "^0.7"
tox = "^3.0"
