[metadata]
name = pygerrit2
summary = Client library for interacting with Gerrit's REST API
author = David Pursehouse
author-email = david.pursehouse@gmail.com
home-page = https://github.com/dpursehouse/pygerrit2
license = The MIT License
description-file = description.rst
keywords = gerrit rest http api client
platform = POSIX, Unix, MacOS
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Software Development :: Libraries :: Python Modules
