module(name = "test-module", version = "1.0.0")

# Standard order: name first
bazel_dep(name = "rules_cc", version = "0.1.1")

# Reversed order: version first
bazel_dep(version = "0.39.1", name = "rules_go")

# Mixed with additional parameters
bazel_dep(
    version = "20230125.3",
    name = "abseil-cpp",
    dev_dependency = True
)

# All parameters in non-standard order
bazel_dep(
    dev_dependency = False,
    version = "0.25.0", 
    name = "rules_python"
)