[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = []
license = ""

[tool.poetry.dependencies]
python = "^3.9"
my-project = {path = "my-project", develop = true}

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
